# PromptHarbor

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: release-tauri.yml
crates/promptbox-app/: Cargo.toml  tauri.conf.json
crates/promptbox-app/capabilities/: default.json
crates/promptbox-app/src/: autostart.rs  collector.rs  commands.rs  desktop.rs  ingestion.rs  lib.rs  local_http.rs  main.rs  startup.rs  state.rs
crates/promptbox-app/src/commands/: desktop.rs  drafts.rs  history.rs  hooks.rs  providers.rs  runtime.rs  sessions.rs  skills.rs  status.rs
crates/promptbox-core/: Cargo.toml
crates/promptbox-core/src/: claude.rs  codex.rs  event.rs  hook_adapter.rs  hook_binary.rs  hook_config.rs  lib.rs  runtime.rs  skills.rs  store.rs
crates/promptbox-core/src/claude/: config.rs  status.rs  tests.rs
crates/promptbox-core/src/codex/: config.rs  status.rs  tests.rs
crates/promptbox-core/src/event/: endpoint.rs  normalize.rs  spool.rs
crates/promptbox-core/src/hook_binary/: source.rs  status.rs  version.rs
crates/promptbox-core/src/hook_config/: backup.rs  command.rs  tree.rs
crates/promptbox-core/src/runtime/: config.rs  paths.rs  status.rs
crates/promptbox-core/src/store/: attachments.rs  drafts.rs  retrieval.rs  schema.rs  sessions.rs  tests.rs  text.rs  types.rs
crates/promptbox-core/src/store/attachments/: extraction.rs  history.rs  storage.rs
crates/promptbox-core/src/store/attachments/extraction/: data_url.rs  expected_images.rs  image_clues.rs
crates/promptbox-core/src/store/drafts/: editing.rs  lifecycle.rs  listing.rs  shared.rs
crates/promptbox-core/src/store/retrieval/: history.rs  search.rs
crates/promptbox-core/src/store/retrieval/search/: drafts.rs  prompt_events.rs  result.rs  sessions.rs
crates/promptbox-core/src/store/sessions/: lifecycle.rs  listing.rs  recording.rs
crates/promptbox-hook/: Cargo.toml
crates/promptbox-hook/src/: main.rs
docs/: promptbox-design.md
docs/adr/: 0001-local-first-and-no-network-by-default.md  0002-mvp-validates-the-local-prompt-workflow.md  0003-hook-privacy-before-capture-completeness.md
docs/code-style/: README.md  docs.md  frontend.md  rust.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  appTypes.ts  formatters.ts  styles.css
frontend/src/features/app/: useAppPollingState.ts
frontend/src/features/drafts/: DraftContextMenu.tsx  DraftItemList.tsx  DraftWorkspace.tsx  ImageAttachmentStrip.tsx  MilkdownDraftEditor.tsx  draftHelpers.ts  useDraftContextMenu.ts  useDraftImages.ts  useDraftWorkspaceState.ts
frontend/src/features/history/: HistoryAttachmentStrip.tsx  PromptHistoryList.tsx  historyTypes.ts  useHistoryAttachmentImages.ts
frontend/src/features/search/: PromptSearch.tsx
frontend/src/features/sessions/: SessionBrowser.tsx  SessionReferenceCard.tsx  SessionTabs.tsx  sessionHelpers.ts  useSessionBrowserState.ts
frontend/src/types/: drafts.ts  history.ts  providers.ts  runtime.ts  sessions.ts  skills.ts  ui.ts
(+10 files in other folders)
