[workspace]
members = [
    "crates/promptbox-app",
    "crates/promptbox-core",
    "crates/promptbox-hook",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/insistanan/PromptHarbor"
authors = ["insistanan"]

[workspace.dependencies]
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
promptbox-core = { path = "crates/promptbox-core" }
rand = "0.8"
reqwest = { version = "0.13.3", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-positioner = "2"
toml = "0.8"
